changed styling + etc

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 }
 
 h1 {
   text-align: center;
   margin: 10px 0;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 300;
 }
 
 .App {
