--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,76 @@
 body {
   margin: 0;
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  background-color: #f9f9f9;
+  color: #333; 
 }
 
+/* Heading Styles */
 h1 {
   text-align: center;
-  margin: 10px 0;
-  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-  font-weight: 300;
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin-top: 20px;
+  color: #5e6e77;
 }
 
+/* Main App Container */
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px;
 }
 
+/* Map Container Styling */
 .leaflet-container {
-  border: 2px solid #ccc;
-  border-radius: 10px;
+  border: 2px solid #dfe4e8;
+  border-radius: 12px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+
+.leaflet-container:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+/* Button Styling*/
+button {
+  background-color: #f1f1f1;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px 5px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #5e6e77;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+button:hover {
+  background-color: #e0e0e0;
+  transform: scale(1.05);
+}
+
+
+.leaflet-popup-content {
+  font-size: 1rem;
+  color: #5e6e77;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+
+.leaflet-marker-icon:hover {
+  transform: scale(1.2);
+}
+
+textarea {
+  width: 180px;
 }
